<resources>
    <string name="app_name">WinStateHack</string>
    <string name="menucards_top_title">Choisissez la carte que vous allez envoyer</string>
    <string name="menucards_fromcollection">- Depuis mon Deck de collection</string>
    <string name="menucards_addcards">- Créer une nouvelle carte</string>
    <string name="menucards_help">- J\'ai besoin d\'aide !</string>
    <string name="createcards_tv_top">Créer une nouvelle carte</string>
    <string name="createcards_create_title">Personnaliser la carte</string>
    <string name="createcards_hint">Ajoute un texte qui fera sourire ton destinaire !</string>
    <string name="createcards_validate">Valider!</string>

    <!-- Connection activity-->
    <string name="connection_title">Contamination positive en cours</string>
    <string name="connection_hint">Le virus est déjà un peu en toi. Le minimum d\'info pour protéger ton compte</string>

    <string name="connection_firstname">Ton prénom</string>
    <string name="connection_mail">Ton mail</string>
    <string name="connection_password">Mot de passe</string>
    <string name="connection_password_confirm">Confirmer mot de passe</string>
    <string name="connection_validate">Commencer !</string>

    <string name="invalid_password">Les mots de passe ne correspondent pas</string>
    <string name="invalid_entries">Veuillez remplir tous les champs</string>
    <string name="invalid_entry">Format incorrect !</string>
    <string name="incorrect_password">Mot de passe incorrect !</string>

    <string name="user_created">Joueur créé !</string>
    <string name="getacard_title">%1$s vous a envoyé cette carte !</string>
    <string name="sourires">%1$s sourires</string>
    <string name="deck_nbrecartes">Vous avez %1$s cartes ! Bien joué !</string>

    <!-- DialogBox deconnection-->
    <string name="deconnection_title">Vous allez vous déconnecter !</string>
    <string name="deconnection">Vous ne pourrez plus envoyer de sourires, cela causera le déclin de l\'environnement proche et à terme provoquera la disparition de l\'Univers... Est-ce vraiment ce que vous voulez ?</string>
    <string name="deconnection_yes">Oui, c\'est l\'heure de ma sieste.</string>
    <string name="deconnection_no">Non, je testais juste le bouton.</string>


</resources>
